Fix RTL alignment for Arabic lists

--- a/jawad-website/style.css
+++ b/jawad-website/style.css
@@ -428,3 +428,22 @@ footer,
 section+section {
     border-top: none;
 }
+
+/* ----------------------------------------------------------
+   7. RTL SUPPORT
+---------------------------------------------------------- */
+[dir="rtl"] .logistics-text,
+[dir="rtl"] .feature-title,
+[dir="rtl"] .features {
+    text-align: right;
+}
+
+[dir="rtl"] .features li {
+    padding-left: 0;
+    padding-right: 20px;
+}
+
+[dir="rtl"] .features li::before {
+    margin-left: 0;
+    margin-right: -1em;
+}
